kubernetes/apps/gitlab-agent/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab-agent
  labels:
    app.kubernetes.io/name: gitlab-agent
    app.kubernetes.io/part-of: gitlab
    app.kubernetes.io/managed-by: flux
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
